--- a/GLNinja.vcxproj
+++ b/GLNinja.vcxproj
@@ -163,6 +163,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EBO.h" />
+    <ClInclude Include="Libraries\include\stb\stb_image.h" />
+    <ClInclude Include="Main.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="VAO.h" />
