--- a/GLNinja.vcxproj
+++ b/GLNinja.vcxproj
@@ -145,10 +145,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DeltaTime.cpp" />
     <ClCompile Include="EBO.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="HoverDetector.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
@@ -165,9 +167,11 @@
     <Image Include="Resources\pop_cat.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="DeltaTime.h" />
     <ClInclude Include="EBO.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="HoverDetector.h" />
     <ClInclude Include="Libraries\include\stb\stb_image.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Mesh.h" />
