--- a/GLNinja.vcxproj
+++ b/GLNinja.vcxproj
@@ -73,15 +73,15 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\Users\kamil\source\repos\GLNinja\Libraries\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\kamil\source\repos\GLNinja\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\kamil\source\repos\GLNinja\Libraries\lib;C:\Users\kamil\source\repos\GLNinja\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\kamil\source\repos\GLNinja\GLNinja\Libraries\include</IncludePath>
-    <LibraryPath>C:\Users\kamil\source\repos\GLNinja\GLNinja\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\kamil\source\repos\GLNinja\Libraries\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\kamil\source\repos\GLNinja\Libraries\lib;C:\Users\kamil\source\repos\GLNinja\GLNinja\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
